ags (5.1.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented missing persistence of machine's dialog model
	* fixed automation XML persistence missing channel-type and control-name
	* fixed machine selector insert machine radio button

ags (5.1.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented missing persistence of tempo program and marker

ags (5.1.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented tempo editor composite widget
	* implemented tempo widget
	* implemented ramp program marker dialog used to automate tempo
	* implemented AgsProgram and AgsMarker
	* implemented ags_level_set_data_format() and ags_level_set_samplerate()
	* implemented ags_sound_provider_set_program() and ags_sound_provider_get_program()

ags (5.0.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved VST3 support
	* fixed octave upper and lower of ags-fx-sf2 and ags-fx-sfz

ags (5.0.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsLiveLv2Bridge missing preset
	* modified default size of application window
	* modified default size of file chooser open dialog

ags (5.0.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* new range of AgsSF2Synth WAV 1 - octave control from -12.0 to 12.0
	* new range of AgsSFZSynth WAV 1 - octave control from -12.0 to 12.0
	* implemented provide system time to ags-fx-vst3
	* implemented ags_soundcard_util_calc_system_time()
	* implemented ags_soundcard_util_calc_time_samples()
	* implemented ags_soundcard_util_calc_time_samples_absolute()
	* improved AgsEnvelopeDialog queue draw
	* extended libags_vst API reference manual
	* modified -xc++ of gsequencer_CPPFLAGS and midi2xml_CPPFLAGS
	* modified -std= from gnu++2a to gnu99
	* refactored template variable and field names of some files
	* refactored enumerated types as function arguments
	* fixed typo in ags_core_audio_devout.h and ags_core_audio_devin.h