@@ -1,3 +1,9 @@
+ags (5.1.3)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved gtk-doc conditional built vst3 related types
+	* improved gtk-doc conditional built libinstpatch related types
+
 ags (5.1.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
